@@ -1,0 +1,67 @@
+[Author::Plicease::FiveEight]
+
+[GatherDir]
+exclude_match = ^_build/
+exclude_filename = Makefile.PL
+exclude_filename = Build.PL
+exclude_filename = cpanfile
+
+[PruneCruft]
+except = .travis.yml
+
+[ManifestSkip]
+[MetaYAML]
+[License]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[Author::Plicease::PrePodWeaver]
+[PodWeaver]
+
+[NextRelease]
+format = %-9v %{yyyy-MM-dd HH:mm:ss Z}d
+
+[AutoPrereqs]
+[OurPkgVersion]
+[MetaJSON]
+
+[Git::Check]
+allow_dirty = dist.ini
+allow_dirty = Changes
+allow_dirty = README.md
+
+[Git::Commit]
+allow_dirty = dist.ini
+allow_dirty = Changes
+allow_dirty = README.md
+
+[Git::Tag]
+[Git::Push]
+[Author::Plicease::Resources]
+[InstallGuide]
+[MinimumPerl]
+[ConfirmRelease]
+
+[ReadmeAnyFromPod]
+location = build
+type = text
+filename = README
+
+[ReadmeAnyFromPod / ReadMePodInRoot]
+filename = README.md
+type = markdown
+location = root
+
+[Author::Plicease::MarkDownCleanup]
+travis_status = 0
+
+[Author::Plicease::Recommend]
+
+[Prereqs / NeedTestMore094]
+Test::More = 0.94
+-phase = test
+
+[Author::Plicease::SpecialPrereqs]
+[CPANFile]
